--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <button id="toggle-dark">Toggle Dark Mode</button>
   </header>  <main>
     <section class="add-task">
-      <input type="text" id="task-input" placeholder="New Habit...">
-      <button id="add-task">Add</button>
+      <input type="text" id="habit-input" placeholder="Enter your habit..." />
+<button id="add-habit">Add</button>
+<div id="habit-list"></div>
+<span id="weekly-score">0%</span>
+<span id="monthly-score">0%</span>
     </section><section id="task-list"></section>
 
   </main>  <script src="firebase-config.js"></script>  <script src="main.js"></script></body>
