--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button id="toggle-dark">Toggle Dark Mode</button>
   </header>
 
-  <main id="mainSection" style="display:none;">
+  <main id="mainSection">
     <section class="add-task">
       <input type="text" id="habit-input" placeholder="Enter your habit..." />
       <button id="add-habit">Add</button>
